snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha1
e031ffab9da0c804d211b5cc93486ea76b7ef4e9